--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <link rel="stylesheet" href="../static/aboutus.css">
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet"> -->
 </head>
 
 <body>
@@ -19,7 +16,7 @@
         <h2>Awareness</h2>
         <!-- Awareness Content -->
         <div>
-            <img class="caption" src="../assets/pics/aware1.jpg" alt="Awareness1" />
+            <img class="caption" src="../assets/pics/aboutus/aware1.jpg" alt="Awareness1" />
             <p>
                 10 thế kỉ nữa, 1 chai nhựa mới được phân huỷ.
             </p>
@@ -44,7 +41,7 @@
             <p>
                 Với những điều đó, ECO SMART VIETNAM ra đời.
             </p>
-            <img class="caption" src="../assets/pics/aware2.jpg" alt="Awareness 2" />
+            <img class="caption" src="../assets/pics/aboutus/aware2.jpg" alt="Awareness 2" />
         </div>
         <hr>
 
@@ -52,7 +49,7 @@
         <h3>Mission</h3>
         <!-- Missions Content -->
         <div>
-            <img class="caption" src="../assets/pics/mission.jpg" alt="Mission" />
+            <img class="caption" src="../assets/pics/aboutus/mission.jpg" alt="Mission" />
             <ol>
                 <li>Nâng cao nhận thức Việt về hoạt động bảo vệ môi trường.</li>
                 <li>Thúc đẩy sự phát triển của sản phẩm eco-friendly.</li>
@@ -62,7 +59,7 @@
         <h3>Vision</h3>
         <!-- Vision Content -->
         <div>
-            <img class="caption" src="../assets/pics/history.jpg" alt="History" />
+            <img class="caption" src="../assets/pics/aboutus/history.jpg" alt="History" />
             <p>
                 Eco Smart Vietnam hoạt động với tầm nhìn trở thành 1 trong những tổ chức học sinh/sinh viên hoạt động tích cực hàng đầu miền Bắc trong hoạt động bảo vệ môi trường. Đặc biệt, ESV tiên phong trong việc thúc đẩy sự phát triển của các sản phẩm thân thiện
                 môi trường.
@@ -73,7 +70,7 @@
         <h2>Founder</h2>
         <!-- Founder Content -->
         <div>
-            <img class="caption" src="../assets/pics/founder.jpg" alt="Founder" />
+            <img class="caption" src="../assets/pics/aboutus/founder.jpg" alt="Founder" />
             <p>
                 Để hình thành và phát triển một dự án thì sự góp phần của người chủ tịch là vô cùng quan trọng. Ngày hôm nay, hãy cùng theo chân chúng mình tìm hiểu về người thủ lĩnh của Eco Smart Vietnam - anh Bùi Đình Trí thông qua phần phỏng vấn nho nhỏ dưới đây,
                 đồng thời cũng để hiểu thêm những thông tin hết sức thú vị về nhà Eco Smart bạn nhé. Bắt đầu thôi nào.
