sua link dinh kem anh va link css

--- a/templates/slideshow.html
+++ b/templates/slideshow.html
@@ -2,79 +2,75 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/slideshow.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="../static/slideshow.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  </head>
+  <body>
     <div class="container">
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-          <!-- Indicators -->
-          <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-            <li data-target="#myCarousel" data-slide-to="3"></li>
-          </ol>
-      
-          <!-- Wrapper for slides -->
-          <div class="carousel-inner">
-            
-            <!--slide 1-->
-            <div class="item active">
-              <img src="/img/1.jpg" >
-              <div class="carousel-caption">
-                
-                <p>slide 1</p>
-              </div>
-            </div>
-            
-            <!--slide 2-->
-            <div class="item">
-              <img src="/img/2.jpg" >
-              <div class="carousel-caption">
-                
-                <p>slide 2</p>
-              </div>
-            </div>
-            
-            <!--slide 3-->
-            <div class="item">
-              <img src="/img/3.jpg" >
-              <div class="carousel-caption">
-               
-                <p>slide 3</p>
-              </div>
-            </div>
-            
-            <!--slide 4-->
-            <div class="item">
-                <img src="/img/4.jpg" >
-                <div class="carousel-caption">
-           
-                  <p>slide 4</p>
-                </div>
-              </div>
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+          <li data-target="#myCarousel" data-slide-to="3"></li>
+        </ol>
 
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+          <!--slide 1-->
+          <div class="item active">
+            <img src="../assets/pics/aboutus/1.jpg" />
+            <div class="carousel-caption">
+              <p>slide 1</p>
+            </div>
           </div>
-      
-          <!-- Left and right controls -->
-          <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#myCarousel" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span class="sr-only">Next</span>
-          </a>
+
+          <!--slide 2-->
+          <div class="item">
+            <img src="../assets/pics/aboutus/2.jpg" />
+            <div class="carousel-caption">
+              <p>slide 2</p>
+            </div>
+          </div>
+
+          <!--slide 3-->
+          <div class="item">
+            <img src="../assets/pics/aboutus/3.jpg" />
+            <div class="carousel-caption">
+              <p>slide 3</p>
+            </div>
+          </div>
+
+          <!--slide 4-->
+          <div class="item">
+            <img src="../assets/pics/aboutus/4.jpg" />
+            <div class="carousel-caption">
+              <p>slide 4</p>
+            </div>
+          </div>
         </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
-      
-</body>
+    </div>
+  </body>
 </html>
