change css link

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="static/footer.css" />
+    <link rel="stylesheet" href="../static/style/footer.css" />
   </head>
   <body>
     <div class="background_footer">
@@ -19,10 +19,10 @@
       </p>
       <div>
         <a href="https://www.facebook.com/ecosmartvietnam"
-          ><img src="/img/facebook.png" alt=""
+          ><img src="../assets/pics/aboutus/facebook.png" alt=""
         /></a>
         <a href="https://www.instagram.com/ecosmart.vietnam/"
-          ><img src="/img/ins.gif" alt=""
+          ><img src="../assets/pics/aboutus/ins.gif" alt=""
         /></a>
       </div>
     </div>
