Change css source in navbar.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,7 @@
   </head>
 
   <body>
-    <div id="banner">{% include 'navbar.html' %}</div>
-
-    {% include 'aboutus.html'%}
+    {% include 'navbar.html' %} {% include 'aboutus.html'%}
 
     <div id="content">
       {% include 'activities.html' %} {% include 'slideshow.html' %}
