--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,7 +19,7 @@
     />
 
     <!-- CSS stylesheet -->
-    <link rel="stylesheet" href="static/style/navbar.css" />
+    <link rel="stylesheet" href="../static/style/navbar.css" />
   </head>
 
   <body>
@@ -64,11 +64,7 @@
               <a class="nav-link" href="#">Search</a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link"
-                href=""
-                >Sign in</a
-              >
+              <a class="nav-link" href="">Sign in</a>
             </li>
           </ul>
         </div>
