doi directory cua anh

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/static/style/navbar.css" />
-    <link rel="stylesheet" href="/static/style/activities.css" />
-    <link rel="stylesheet" href="/static/style/aboutus.css" />
-    <link rel="stylesheet" href="/static/style/slideshow.css" />
-    <link rel="stylesheet" href="/static/style/footer.css" />
+    <link rel="stylesheet" href="../static/style/navbar.css" />
+    <link rel="stylesheet" href="../static/style/activities.css" />
+    <link rel="stylesheet" href="../static/style/aboutus.css" />
+    <link rel="stylesheet" href="../static/style/slideshow.css" />
+    <link rel="stylesheet" href="../static/style/footer.css" />
     <title>Home</title>
   </head>
 
@@ -18,6 +18,6 @@
     <div id="content">
       {% include 'activities.html' %} {% include 'slideshow.html' %}
     </div>
+    <footer>{% include 'footer.html' %}</footer>
   </body>
-  <footer>{% include 'footer.html' %}</footer>
 </html>
