--- a/templates/activities.html
+++ b/templates/activities.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<div>
     <!--file div tổng chứa activities-->
     <div class="background-activities">
         <!-- file div chứa cả 2 dòng -->
@@ -68,6 +68,6 @@
         </div>
     </div>
     </div>
-</body>
+</div>
 
 </html>
