--- a/static/style/navbar.css
+++ b/static/style/navbar.css
@@ -1,25 +1,36 @@
 /* Made by GPham  */
 
 .navbar {
-  background-color: rgb(131, 188, 117);
+  background-color: rgb(38, 151, 10);
   padding-top: 0;
   padding-bottom: 0;
   font-family: "Arial";
   font-style: normal;
+  font-weight: 500;
+  
 }
 
 .navbar-brand {
-  width: 20%;
+
+}
+
+.container-fluid{
+  height: 35%;
+}
+
+.nav-item{
+  float: left;
 }
 
 .title-logo {
   width: 20%;
-  margin-left: 110%;
+  margin-left: 15%;
 }
 
 .title-name {
   display: inline-block;
-  font-size: 90%;
+  font-size: 3vh;
+  font-weight: 300;
 }
 
 .navbar-nav {
@@ -27,10 +38,9 @@
 }
 
 .navbar-toggler {
-  margin-right: 5%;
+  padding-left: 25%;
 }
 
 #navbarToggler {
-  margin-left: 15%;
   padding-right: 10%;
 }
