--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../static/style/aboutus.css">
 </head>
 
-<body>
+<div>
     <main>
         <!-- Including: Awareness, Mission & Vision, Founder -->
         <h1>About Us</h1>
@@ -106,6 +106,6 @@
             </p>
         </div>
     </main>
-</body>
+</div>
 
 </html>
