--- a/templates/index.html
+++ b/templates/index.html
@@ -8,17 +8,21 @@
   <body>
     <!-- include navbar.html here -->
     {% include 'navbar.html' %}
-
+    <div> Eco Smart Vietnam </div>
+    {% include 'carousel.html' %}
     <!-- include body.html here -->
     {% include 'activities.html' %}
     {% include 'slideshow.html' %}
-    {% include 'aboutus.html' %}
-
-
+    <div>
+      {% include 'aboutus.html' %}
+    </div>
+    {% include 'footer.html' %}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OG"> </script>
   </body>
 
-  <footer>
-    <!-- include footer.html here -->
-    {% include 'footer.html' %}
-  </footer>
+
+  
+
+
 </html>
