--- a/templates/slideshow.html
+++ b/templates/slideshow.html
@@ -30,7 +30,7 @@
         <div class="carousel-inner">
           <!--slide 1-->
           <div class="item active">
-            <img src="../assets/pics/aboutus/1.jpg" />
+            <img src="../../assets/pics/aboutus/1.jpg" />
             <div class="carousel-caption">
               <p>slide 1</p>
             </div>
@@ -38,7 +38,7 @@
 
           <!--slide 2-->
           <div class="item">
-            <img src="../assets/pics/aboutus/2.jpg" />
+            <img src="../../assets/pics/aboutus/2.jpg" />
             <div class="carousel-caption">
               <p>slide 2</p>
             </div>
@@ -46,7 +46,7 @@
 
           <!--slide 3-->
           <div class="item">
-            <img src="../assets/pics/aboutus/3.jpg" />
+            <img src="../../assets/pics/aboutus/3.jpg" />
             <div class="carousel-caption">
               <p>slide 3</p>
             </div>
@@ -54,7 +54,7 @@
 
           <!--slide 4-->
           <div class="item">
-            <img src="../assets/pics/aboutus/4.jpg" />
+            <img src="../../assets/pics/aboutus/4.jpg" />
             <div class="carousel-caption">
               <p>slide 4</p>
             </div>
