--- a/templates/footer.html
+++ b/templates/footer.html
@@ -10,7 +10,7 @@
   <body>
     <div class="background_footer">
       <p>
-        All right reserved by
+        All rights reserved by
         <a href="https://www.facebook.com/ecosmartvietnam">
           ECO SMART VIETNAM</a
         >
