--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
   <body>
     <!-- include navbar.html here -->
     {% include 'navbar.html' %}
-    <div> Eco Smart Vietnam </div>
+    <div style='color: green; font-family: Georgia; font-size: 40px; font-weight: bold; text-align: center;'>ECO SMART VIETNAM</div>
     {% include 'carousel.html' %}
     <!-- include body.html here -->
     {% include 'activities.html' %}
