--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,6 +20,7 @@
 
     <!-- CSS stylesheet -->
     <link rel="stylesheet" href="../static/style/navbar.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
@@ -60,10 +61,13 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Search</a>
+              <a class="nav-link" href="">Sign in</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Sign in</a>
+              <form class="search-container">
+                <input type="text" placeholder="Search..">
+                <button type="submit"><i class="fa fa-search"></i></button>
+              </form>
             </li>
           </ul>
         </div>
