--- a/static/style/navbar.css
+++ b/static/style/navbar.css
@@ -49,6 +49,8 @@
   padding: 6px;
   margin-top: 8px;
   border: none;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 /* Submit icon for search box */
@@ -60,6 +62,8 @@
   background: #ddd;
   border: none;
   cursor: pointer;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .search-container button:hover {
