--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,8 +24,13 @@
   </head>
 
   <body>
+    <div class='title'>
+      <a href="?" id="title-link">
+        <p>ECO SMART VIETNAM</p>
+      </a>
+    </div>
     <!-- Navbar expands from large and collapse from size smaller than large -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg" id="navbar-id">
       <!-- Navbar spans the entire width of any viewport -->
       <div class="container-fluid">
         <a href="#" class="navbar-brand">
