--- a/templates/activities.html
+++ b/templates/activities.html
@@ -20,23 +20,26 @@
             <div class="line1">
                 <!-- file div chứa nội dung ảnh 1 -->
                 <div class="folder anh1">
-                    <a href=""> <img src="../static/images/activities/activities1.jpg"
+                    <div class="folder_anh">
+                    <a href="https://www.facebook.com/photo/?fbid=107995395495248&set=pcb.107563388871782"> <img src="../static/images/activities/activities1.jpg"
                             alt="activites1" class="anh anh1"> </a>
-
-                    <h3 class="line_below_img"> Ảnh 1 </h3>
+                         </div>
+                    <h3 class="line_below_img"> Anh 1 </h3>
                 </div>
                 <!-- file div chứa nội dung ảnh 2 -->
                 <div class="folder anh2">
-                    <a href=""> <img src="../static/images/activities/activities2.jpg"
+                    <div class="folder_anh">
+                    <a href="https://www.facebook.com/photo?fbid=106068572354597&set=a.105895305705257"> <img src="../static/images/activities/activities2.jpg"
                             alt="activites2" class="anh anh2"></a>
-
+                    </div>
                     <h3 class="line_below_img"> Ảnh 2 </h3>
                 </div>
                 <!-- file div chứa nội dung ảnh 3 -->
                 <div class="folder anh3">
-                    <a href=""> <img src="../static/images/activities/activities3.jpg"
+                    <div class="folder_anh">
+                    <a href="https://www.facebook.com/photo?fbid=114589198169201&set=a.109001262061328"> <img src="../static/images/activities/activities3.jpg"
                             alt="activites3" class="anh anh3"></a>
-
+                    </div>
                     <h3 class="line_below_img"> Ảnh 3 </h3>
                 </div>
             </div>
@@ -44,24 +47,26 @@
             <div class="line2">
                 <!-- file div chứa nội dung ảnh 4 -->
                 <div class="folder anh4">
-
-                    <a href=""> <img src="../static/images/activities/activities4.jpg"
+                    <div class="folder_anh">
+                    <a href="https://www.facebook.com/photo?fbid=112881635006624&set=pcb.112882615006526"> <img src="../static/images/activities/activities4.jpg"
                             alt="activites4" class="anh anh4"> </a>
-
+                    </div>
                     <h3 class="line_below_img"> Ảnh 4 </h3>
                 </div>
                 <!-- file div chứa nội dung ảnh 5 -->
                 <div class="folder anh5">
-                    <a href=""> <img src="../static/images/activities/activites5.jpg"
+                    <div class="folder_anh">
+                    <a href="https://www.facebook.com/photo?fbid=112881805006607&set=pcb.112882615006526"> <img src="../static/images/activities/activites5.jpg"
                             alt="activites5" class="anh anh5"></a>
-
+                    </div>
                     <h3 class="line_below_img"> Ảnh 5 </h3>
                 </div>
                 <!-- file div chứa nội dung ảnh 6 -->
                 <div class="folder anh6">
-                    <a href=""> <img src="../static/images/activities/activites6.jpg"
+                    <div class="folder_anh">
+                    <a href="https://www.facebook.com/photo/?fbid=117929084501879&set=pcb.117926967835424"> <img src="../static/images/activities/activites6.jpg"
                             alt="activites6" class="anh anh6"></a>
-
+                    </div>
                     <h3 class="line_below_img"> Ảnh 6 </h3>
                 </div>
             </div>
