--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,8 @@
 
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,24 +13,17 @@
     <link rel="stylesheet" href="../static/style/slideshow.css" />
     <link rel="stylesheet" href="../static/style/footer.css" />
     <title>Home</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <!-- include navbar.html here -->
-    {% include 'navbar.html' %}
-    {% include 'carousel.html' %}
+    {% include 'navbar.html' %} {% include 'carousel.html' %}
     <!-- include body.html here -->
     {% include 'activities.html' %} {% include 'slideshow.html' %}
     <div>{% include 'aboutus.html' %}</div>
-    {% include 'footer.html' %}
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OG"
-    ></script>
-  </body>
+    <!--{% include 'footer.html' %}-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OG"></script>
+</body>
+
 </html>
