--- a/static/style/footer.css
+++ b/static/style/footer.css
@@ -1,28 +1,22 @@
-*{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
-
-    
-    
-}
 .background_footer {
-    position: fixed;
+    position: bottom;
     left: 0px;
     bottom: 0px;
     right: 0px;
     align-items: center;
-    background-color:rgb(38, 151, 10);
+    background-color: rgb(38, 151, 10);
     height: 5rem;
     width: 100%;
     display: flex;
     justify-content: space-around;
-    
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
 }
 
-p{
+.footerstyle {
     color: white;
 }
 
-img{
+.footerimages {
     width: 50px;
 }
