--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,15 +1,11 @@
 <link rel="stylesheet" href="../static/style/footer.css" />
 <div class="background_footer">
-  <p>
-    All right reserved by
-    <a href="https://www.facebook.com/ecosmartvietnam"> ECO SMART VIETNAM</a>
-  </p>
-  <div>
-    <a href="https://www.facebook.com/ecosmartvietnam"
-      ><img src="../static/images/footer/facebook.png" alt=""
-    /></a>
-    <a href="https://www.instagram.com/ecosmart.vietnam/"
-      ><img src="../static/images/footer/ins.gif" alt=""
-    /></a>
-  </div>
+    <p class="footerstyle">
+        All right reserved by
+        <a href="https://www.facebook.com/ecosmartvietnam"> ECO SMART VIETNAM</a>
+    </p>
+    <div>
+        <a href="https://www.facebook.com/ecosmartvietnam"><img class="footerimages" src="../static/images/footer/facebook.png" alt="" /></a>
+        <a href="https://www.instagram.com/ecosmart.vietnam/"><img class="footerimages" src="../static/images/footer/ins.gif" alt="" /></a>
+    </div>
 </div>
