--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,12 +20,15 @@
 
     <!-- CSS stylesheet -->
     <link rel="stylesheet" href="../static/style/navbar.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
 
   <body>
-    <div class='title'>
-      <a href="?" id="title-link">
+    <div class="title">
+      <a href="/" id="title-link">
         <p>ECO SMART VIETNAM</p>
       </a>
     </div>
@@ -70,7 +73,7 @@
             </li>
             <li class="nav-item">
               <form class="search-container">
-                <input type="text" placeholder="Search..">
+                <input type="text" placeholder="Search.." />
                 <button type="submit"><i class="fa fa-search"></i></button>
               </form>
             </li>
