--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,7 +6,7 @@
   </p>
   <div>
     <a href="https://www.facebook.com/ecosmartvietnam"
-      ><img src="../static/images/footer/facebook.png" alt=""
+      ><img src="../static/images/footer/ins.gif" alt=""
     /></a>
     <a href="https://www.instagram.com/ecosmart.vietnam/"
       ><img src="../static/images/footer/ins.gif" alt=""
