Animation added to About Us Page and Button added to Home Page

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -15,61 +15,7 @@
         <main id="mainstyle">
             <!-- Including: Awareness, Mission & Vision, Founder -->
             <h1 class="head1">About Us</h1>
-
-            <h2 class="head2">Awareness</h2>
-            <!-- Awareness Content -->
-            <div>
-                <img class="caption" src="../static/images/aboutus/aware1.jpg" alt="Awareness1" />
-                <p>
-                    10 thế kỉ nữa, 1 chai nhựa mới được phân huỷ.
-                </p>
-                <p>
-                    100 năm nữa, 1 bao ni lông mới rời khỏi trái đất này.
-                </p>
-                <p>
-                    Thế nhưng..
-                </p>
-                <p>
-                    Loài người thải 3,5 triệu tấn rác mỗi ngày.
-                </p>
-                <p>
-                    Mỗi năm, người Việt Nam thải ra khoảng 1,8 triệu tấn rác nhựa..
-                </p>
-                <p>
-                    Liệu vài năm sau, khi đống rác kia chưa kịp phân huỷ, liệu có phải loài người sẽ ăn trên đống rác, ngủ trên đống rác, và ngập ngụa trong Đại dương rác ?
-                </p>
-                <p>
-                    Nếu bây giờ, không hành động, thì là bao giờ ?
-                </p>
-                <p>
-                    Với những điều đó, ECO SMART VIETNAM ra đời.
-                </p>
-                <img class="caption" src="../static/images/aboutus/aware2.jpg" alt="Awareness 2" />
-            </div>
-            <hr>
-
-            <h2 class="head2">Mission & Vision</h2>
-            <h3 class="head3">Mission</h3>
-            <!-- Missions Content -->
-            <div>
-                <img class="caption" src="../static/images/aboutus/mission.jpg" alt="Mission" />
-                <ol>
-                    <li>Nâng cao nhận thức Việt về hoạt động bảo vệ môi trường.</li>
-                    <li>Thúc đẩy sự phát triển của sản phẩm eco-friendly.</li>
-                </ol>
-            </div>
-
-            <h3 class="head3">Vision</h3>
-            <!-- Vision Content -->
-            <div>
-                <img class="caption" src="../static/images/aboutus/history.jpg" alt="History" />
-                <p>
-                    Eco Smart Vietnam hoạt động với tầm nhìn trở thành 1 trong những tổ chức học sinh/sinh viên hoạt động tích cực hàng đầu miền Bắc trong hoạt động bảo vệ môi trường. Đặc biệt, ESV tiên phong trong việc thúc đẩy sự phát triển của các sản phẩm thân thiện
-                    môi trường.
-                </p>
-            </div>
-            <hr>
-
+            {% include 'animation.html' %}
             <h2 class="head2">Founder</h2>
             <!-- Founder Content -->
             <div>
