--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <!-- include navbar.html here -->
-    {% include 'navbar.html' %} {% include 'carousel.html' %}
+    {% include 'navbar.html' %} {% include 'carousel.html' %} {% include 'button.html' %}
     <!-- include body.html here -->
     {% include 'activities.html' %} {% include 'slideshow.html' %}
     <div>{% include 'aboutus.html' %}</div>
