Change page icon and title

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style/aboutus.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='style/slideshow.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='style/footer.css') }}" />
-    <title>Home</title>
+    <title>Eco Smart Vietnam</title>
+    <!-- add icon link -->
+    <link rel="icon" href="{{ url_for('static', filename='images/aboutus/logo.png') }}" type="image/x-icon">
 </head>
 
 <body>
