Change links into url_for, restyle slideshow

--- a/project/templates/activities.html
+++ b/project/templates/activities.html
@@ -17,7 +17,7 @@
                 <th class="folder 1">
                     
                     <div class="folder_anh">
-                    <a href="https://www.facebook.com/photo/?fbid=107995395495248&set=pcb.107563388871782"> <img src="../static/images/activities/activities1.jpg"
+                    <a href="https://www.facebook.com/photo/?fbid=107995395495248&set=pcb.107563388871782"> <img src="{{ url_for('static', filename='images/activities/activities1.jpg') }}"
                             alt="activites1" class="anh anh1"> </a>
                          </div>
                     <h3 class="line_below_img"> Loài người rồi sẽ ăn ngủ trên đống rác </h3>
@@ -26,7 +26,7 @@
                 <th class="folder 2">    
                     
                         <div class="folder_anh">
-                        <a href="https://www.facebook.com/photo?fbid=106068572354597&set=a.105895305705257"> <img src="../static/images/activities/activities2.jpg"
+                        <a href="https://www.facebook.com/photo?fbid=106068572354597&set=a.105895305705257"> <img src="{{ url_for('static', filename='images/activities/activities2.jpg') }}"
                                 alt="activites2" class="anh anh2"></a>
                                 
                         </div>
@@ -36,7 +36,7 @@
                 <th class="folder 3">
                    
                         <div class="folder_anh">
-                        <a href="https://www.facebook.com/photo?fbid=114589198169201&set=a.109001262061328"> <img src="../static/images/activities/activities3.jpg"
+                        <a href="https://www.facebook.com/photo?fbid=114589198169201&set=a.109001262061328"> <img src="{{ url_for('static', filename='images/activities/activities3.jpg') }}"
                                 alt="activites3" class="anh anh3"></a>
                         </div>
                         <h3 class="line_below_img"> HUMAN OF ECO SMART VIETNAM EP 02 </h3>
@@ -46,21 +46,21 @@
             <tr class="line2">
                 <th class="folder 4">
                     <div class="folder_anh">
-                        <a href="https://www.facebook.com/photo?fbid=112881635006624&set=pcb.112882615006526"> <img src="../static/images/activities/activities4.jpg"
+                        <a href="https://www.facebook.com/photo?fbid=112881635006624&set=pcb.112882615006526"> <img src="{{ url_for('static', filename='images/activities/activities4.jpg') }}"
                                 alt="activites4" class="anh anh4"> </a>
                         </div>
                         <h3 class="line_below_img"> Vũ trụ có thực sự đáng sống  </h3>
                 </th>
                 <th class="folder 5">
                     <div class="folder_anh">
-                        <a href="https://www.facebook.com/photo?fbid=112881805006607&set=pcb.112882615006526"> <img src="../static/images/activities/activites5.jpg"
+                        <a href="https://www.facebook.com/photo?fbid=112881805006607&set=pcb.112882615006526"> <img src="{{ url_for('static', filename='images/activities/activities5.jpg') }}"
                                 alt="activites5" class="anh anh5"></a>
                         </div>
                         <h3 class="line_below_img"> Tinh trạng hiện nay </h3>
                 </th>
                 <th class="folder 5">
                     <div class="folder_anh">
-                        <a href="https://www.facebook.com/photo/?fbid=117929084501879&set=pcb.117926967835424"> <img src="../static/images/activities/activites6.jpg"
+                        <a href="https://www.facebook.com/photo/?fbid=117929084501879&set=pcb.117926967835424"> <img src="{{ url_for('static', filename='images/activities/activities6.jpg') }}"
                                 alt="activites6" class="anh anh6"></a>
                         </div>
                         <h3 class="line_below_img"> Thông điệp vũ trụ </h3>
