--- a/project/templates/carousel.html
+++ b/project/templates/carousel.html
@@ -6,21 +6,21 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="{{ url_for('static', filename='images/aboutus/aware1.jpg') }}" class="d-block w-100" alt="Image 1">
+      <img src="{{ url_for('static', filename='images/activities/activities1.jpg') }}" class="d-block w-100" alt="Image 1">
       <div class="carousel-caption d-none d-md-block">
         <h5>Image 1</h5>
         <p>Description for image 1</p>
       </div>
     </div>
     <div class="carousel-item">
-      <!-- <img src="{{ url_for('static', filename='images/activities/activities1.jpg') }}" class="d-block w-100" alt="Image 2"> -->
+      <img src="{{ url_for('static', filename='images/activities/activities1.jpg') }}" class="d-block w-100" alt="Image 2">
       <div class="carousel-caption d-none d-md-block">
         <h5>Image 2</h5>
         <p>Description for image 2</p>
       </div>
     </div>
     <div class="carousel-item">
-      <!-- <img src="{{ url_for('static', filename='images/activities/activities1.jpg') }}" class="d-block w-100" alt="Image 3"> -->
+      <img src="{{ url_for('static', filename='images/activities/activities1.jpg') }}" class="d-block w-100" alt="Image 3">
       <div class="carousel-caption d-none d-md-block">
         <h5>Image 3</h5>
         <p>Description for image 3</p>
