--- a/project/templates/footer.html
+++ b/project/templates/footer.html
@@ -1,8 +1,8 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='style/footer.css') }}" />
 <div class="background_footer">
     <p class="footerstyle">
-        All right reserved by
-        <a href="https://www.facebook.com/ecosmartvietnam"> ECO SMART VIETNAM</a>
+        All rights reserved by
+        <a href="https://www.facebook.com/ecosmartvietnam">ECO SMART VIETNAM</a>
     </p>
     <div>
         <a href="https://www.facebook.com/ecosmartvietnam"><img class="footerimages" src="{{ url_for('static', filename='images/footer/facebook.png') }}" alt="" /></a>
