--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -19,9 +19,11 @@
 
 <body>
     <!-- include navbar.html here -->
-    {% include 'navbar.html' %} {% include 'carousel.html' %}
+    {% include 'navbar.html' %} 
+    {% include 'carousel.html' %}
     <!-- include body.html here -->
-    {% include 'activities.html' %} {% include 'slideshow.html' %}
+    {% include 'activities.html' %} 
+    {% include 'slideshow.html' %}
     <div>{% include 'aboutus.html' %}</div>
     <!--{% include 'footer.html' %}-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
