--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -25,7 +25,7 @@
     {% include 'activities.html' %} 
     {% include 'slideshow.html' %}
     <div>{% include 'aboutus_content.html' %}</div>
-    <!--{% include 'footer.html' %}-->
+    {% include 'footer.html' %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OG"></script>
 </body>
