--- a/project/templates/aboutus.html
+++ b/project/templates/aboutus.html
@@ -11,11 +11,15 @@
 
 <body id="bodystyle">
     {% include 'navbar.html' %}
+    <div class="head1">
+        <h1>About Us</h1>
+    </div>
     <div>
         <main id="mainstyle">
             <!-- Including: Awareness, Mission & Vision, Founder -->
-            <h1 class="head1">About Us</h1>
+            <h2 class="head2">Awareness, Mission and Vision</h2>
             {% include 'animation.html' %}
+
             <h2 class="head2">Founder</h2>
             <!-- Founder Content -->
             <div>
