Abour Us Content Update

--- a/project/templates/aboutus_content.html
+++ b/project/templates/aboutus_content.html
@@ -10,10 +10,13 @@
 </head>
 
 <body id="bodystyle">
+    <div id="aboutus-content">
+        <h1>About Us</h1>
+    </div>
     <div>
         <main id="mainstyle">
             <!-- Including: Awareness, Mission & Vision, Founder -->
-            <h1 class="head1">About Us</h1>
+            <h2 class="head2">Awareness, Mission and Vision</h2>
             {% include 'animation.html' %}
             <h2 class="head2">Founder</h2>
             <!-- Founder Content -->
