update link for logo on navbar, add head and foot for activities, add activities link to nav

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -22,7 +22,8 @@
     {% include 'navbar.html' %} 
 
     <!-- include body.html here -->
-    {% include 'activities.html' %} 
+    {% include 'button.html' %} 
+    {% include 'activities_content.html' %} 
     {% include 'slideshow.html' %}
     <div>{% include 'aboutus_content.html' %}</div>
     {% include 'footer.html' %}
