--- a/project/templates/button.html
+++ b/project/templates/button.html
@@ -9,9 +9,9 @@
 
 <body>
     <div class="button-show">
-        <a class="button" href="/about-us">About Us</a>
-        <a class="button" href="/activities">Activities</a>
-        <a class="button" href="/sildeshow">Animation</a>
+        <a class="button" href="/about-us/">About Us</a>
+        <a class="button" href="/activities/">Activities</a>
+        <a class="button" href="/sildeshow/">Animation</a>
     </div>
 </body>
 
