--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -24,11 +24,9 @@
     <!-- include body.html here -->
     {% include 'button.html' %} 
     {% include 'activities_content.html' %} 
+    <iframe style="display: block; margin: auto;" width="560" height="315" src="https://www.youtube.com/embed/doeU59yKY78" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     {% include 'slideshow.html' %}
     <div>{% include 'aboutus_content.html' %}</div>
-    <video width='320' height='240' controls autoplay><source src="https://www.youtube.com/watch?v=SuzXHUoFON8" type="video/mp4">Video not supported</video>
-    {% include 'footer.html' %}
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OG"></script>
 </body>
 
